--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,46 @@
-name: Get Bing Wallpaper
+name: Bing Daily Wallpaper
 
+# 定时触发 + 手动触发
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
   schedule:
-    - cron: "10 15 * * *" # 每天 0:30 UTC 运行（可以改时区）
+    # 每天日本时间 0:10 执行 (UTC+9 = UTC 15:10)
+    - cron: '10 15 * * *'
 
 jobs:
-  download-and-commit:
+  download-and-notify:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout 仓库
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y jq curl git
-
-      - name: Run Wallpaper Script
+      # 2️⃣ 下载壁纸
+      - name: Run wallpaper script
+        id: download
         run: |
-          chmod +x scripts/get-wallpaper.sh
-          ./scripts/get-wallpaper.sh
+          chmod +x ./script/download_wallpaper.sh
+          ./script/download_wallpaper.sh
+        continue-on-error: true  # 即使失败也继续执行
 
-      - name: Commit and Push New Wallpaper
+      # 3️⃣ Commit & Push 新壁纸
+      - name: Commit & Push new wallpaper
         run: |
-          if [[ -n "$(git status --porcelain wallpapers logs)" ]]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add wallpapers logs
-            git commit -m "Add Bing Wallpaper for $(date +'%Y-%m-%d')"
-            git push
-          else
-            echo "No new wallpaper to commit."
-          fi
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add wallpapers/
+          git commit -m "Add new Bing wallpaper on $(date +'%Y-%m-%d')" || echo "No changes to commit"
+          git push
+        continue-on-error: true
+
+      # 4️⃣ 发送邮件通知
+      - name: Run PowerShell Notification
+        shell: pwsh
+        if: always()  # 无论前一步成功或失败都执行
+        env:
+          RESEND_API_TOKEN: ${{ secrets.RESEND_API_TOKEN }}
+          MAIL_RECEIVER: ${{ secrets.MAIL_RECEIVER }}
+          MAIL_SENDER: ${{ secrets.MAIL_SENDER }}
+          ACTION_RESULT: ${{ steps.download.outcome }}  # 获取下载步骤状态
+        run: pwsh ./script/email.ps1
