--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Run wallpaper script
         id: download
         run: |
-          chmod +x ./scripts/download_wallpaper.sh
-          ./scripts/download_wallpaper.sh
+          chmod +x ./scripts/get-wallpaper.sh
+          ./scripts/get-wallpaper.sh
         continue-on-error: true  # 即使失败也继续执行
 
       # 3️⃣ Commit & Push 新壁纸
